--- a/6/OJT6/package.json
+++ b/6/OJT6/package.json
@@ -22,6 +22,7 @@
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
+    "@types/node": "^20.10.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -36,5 +37,8 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
