--- a/6/OJT6/package.json
+++ b/6/OJT6/package.json
@@ -15,13 +15,19 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@react-oauth/google": "^0.12.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "fabric": "^5.3.0",
     "jotai": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
+    "@types/fabric": "^5.3.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
